# agent

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHENTICATION_FLOW.md  CLAUDE.md  Cargo.toml  DOCUMENTATION_IMPROVEMENTS.md  EXPLICIT_ANY_MIGRATION.md  GITHUB_INTEGRATION.md  IMPLEMENTATION_PLAN.md  README.bg.md  README.md  README.meta.yaml  REQUIREMENTS.md  ROADMAP.CLI.md  ROADMAP.md  TODO.md  TYPE_CHECKING.md  TYPE_CHECK_FAILURES.md  TYPE_SAFETY_ACHIEVEMENTS.md  coverage-quick-reference.md  coverage.json  epic_18_migration_plan.md  ergonomics_demo.py  example_observability_demo.py  main.py  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  rustfmt.toml  test_final_rag.sh  test_interactive_rag.py  test_rag_basic.py  vulture.ini  vulture_baseline.txt
.claude/: CONTEXT_MIGRATION.md  FEM_RETRO_1A.md  FLOW_COMMAND.md  FLOW_ENGINE_MIGRATION_PLAN.md  FLOW_ENGINE_MIGRATION_PLANS_1.md  FLOW_ENGINE_MIGRATION_PLANS_2.md  FLOW_ENGINE_MIGRATION_PLANS_3.md  ISSUE_SUMMARY.md  settings.json  todo.md
.claude/commands/: debug-optimize.md  debug_retro.md  gh-issue.md
.claude/guidelines/: cli-development.md  guidelines.md  guidelines.txt
.claude/retros/: context-flow-bridge-list-protocols.md  context-flow-migration.md  context-migration-commit-71.md  context-migration.md  epic-13-advanced-combinators.md  epic-14-combinators-init.md  epic-15-performance-monitoring.md  epic-17-debugging-tools-migration.md  epic-19-observability-performance-exports.md  epic-22-observability-health-exports.md  epic-23-complete-observability-init.md  epic-24-flow-benchmarks-test-class-1.md  epic-28-observability-lifecycle-tests.md  epic-29-observability-scenarios.md  epic-30-observability-test-fixtures.md  epic-31-observability-test-utilities.md  epic-32-flowregistry-migration.md  epic-33-registry-functions-part1.md  epic-34-registry-functions-part2.md  epic-35-registry-decorator.md  epic-36-registry-init.md  epic-37-registry-test-class-1.md  epic-38.md  epic-39-registry-persistence-decorator-tests.md  epic-40-extension-base-class.md  epic-41-extension-registry.md  epic-42-extension-utilities.md  epic-47-flow-debugging-ergonomics.md  epic18-health-monitoring.md  epic21-observability-debugging-exports.md  epic39-registry-persistence-decorator-tests.md  epic40-extension-base-class.md  flow-command-integration.md  flow-engine-migration-epic-16.md  function-length-refactoring.md  function-refactoring-initiative.md
.discover_debugging_tools/: debugging_tools_data.json  debugging_tools_reference.md  quick_debugging_reference.md
.embeddings/: metadata.json
.github/: claude-code-review.yml  dependabot.yml
.github/workflows/: bump-version.yml  ci.yml  claude-code-review.yml  claude-dispatch.yml  claude-watch.yml  claude.yml  continuous-integration.yaml  continuous-integration.yml  docs-pr.yml  docs.yml  release.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  system_info.md  task_completion_checklist.md
docs/: ARCHITECTURE.md  CHARACTER_SYSTEM.md  IMPLEMENTATION_ROADMAP.md  RAG_SYSTEM.md  README.md  TESTING_STRATEGY.md  claude-code-hooks.md  conf.py  context-migration.rst  dead-code-detection.md  dead-code-detection.rst  debugging-improvements.md  development.rst  flow_engine_modularization_plan.md  flowengine-guide.rst  flowengine.rst  index.rst  migration-status.rst  overview.rst  quickstart.rst
docs/_static/: custom.css
docs/api/: context.rst  context_flow.rst  flowengine.rst  git_hooks.rst  goldentooth_agent.rst  modules.rst
docs/background/: index.rst
examples/: README.bg.md  README.meta.yaml  context_eventflow_demo.py  flow_agent_calculator.py  flow_agent_demo.py  flow_agent_instructor_demo.py  flow_context_demo.py  performance_optimization_demo.py  trampoline_demo.py
git/hooks/: check_file_length.py  check_file_length.sh  check_file_length_warnings.py  check_file_length_warnings.sh  check_module_size.py  check_module_size.sh  check_module_size_warnings.py  check_module_size_warnings.sh
goldentooth_agent/: __init__.py  cli.py  main.py
guidelines/: README.md  actually-works.md  architecture.md  background-documentation.md  code-style.md  command-reference.md  debugging-guide.md  development-workflow.md  documentation.md  error-handling.md  mock-compliance.md  module-development.md  performance.md  testing-standards.md  type-safety-development.md  type-safety.md  vscode-setup.md
scripts/: README.bg.md  README.md  README.meta.yaml  analyze_complexity.py  analyze_response_patterns.py  audit_type_annotations.py  check-symbol-duplicates.py  check_claude_guidelines.py  check_dict_access.py  check_extraction_readiness.py  check_staged_coverage.py  coverage_analysis.py  create_module_docs.py  discover_debug_tools.py  extract_flow_module.py  find_orphaned_code.py  fix_b904_exceptions.sh  fix_cli_returns.sh  fix_multiline_functions.py  fix_mypy_errors.sh  fix_type_args.sh  fix_unused_ignores.sh  format_files.py  format_single_file.py  install-mcp-server.sh  migrate_to_openai_embeddings.py  qa_check.py  run_precommit_individually.py  setup-github-pages.sh  show_module_sizes.py  simple_population.py  stop_hook_check.py  symbol-duplicates-analysis.md  test_structure_validator.py  update-metadata.py  vulture_diff.py
src/: error.rs  lib.rs  logging.rs  main.rs  pyrightconfig.json
src/cli/: cli_interface.rs  commands.rs  mod.rs
src/config/: config_types.rs  configuration_manager.rs  mod.rs
src/context/: __init__.py  computed.py  computed_properties_manager.py  dependency_graph.py  frame.py  history_tracker.py  key.py  main.py  (+7 more)
tests/: README.bg.md  README.meta.yaml  chat_session.py  chat_session.py.old  cli_interface_tests.rs  configuration_manager_tests.rs  integrated_mcp_server.rs  io_schema.py  json_rpc_protocol.rs  mock_factories.py  persona_registry_tests.rs  protocols.py  pyrightconfig.json  schema.py.old  stage_manager_tests.rs  stdio_integration.rs  test_maybe_await.py  test_mock_compliance.py  test_sanity.py  transport_http.rs  transport_http_server_compatibility.rs  transport_stdio.rs
(+1471 files in other folders)
