[project]
name = "goldentooth-agent"
version = "0.0.1"
description = ""
authors = [
  { name = "Nate Douglas", email = "ndouglas@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  "anthropic (>=0.52.1,<0.53.0)",
  "openai (>=1.52.0,<2.0.0)",
  "antidote (>=2.0.0,<3.0.0)",
  "atomic-agents (>=1.1.3,<2.0.0)",
  "dotenv (>=0.9.9,<0.10.0)",
  "instructor (>=1.8.3,<2.0.0)",
  "pyee (>=13.0.0,<14.0.0)",
  "rich (>=13.0.0,<14.0.0)",
  "typer (>=0.16.0,<0.17.0)",
  "platformdirs (>=4.3.8,<5.0.0)",
  "hunter (>=3.7.0,<4.0.0)",
  "loguru (>=0.7.3,<0.8.0)",
  "httpx (>=0.27.0,<0.28.0)",
  "beautifulsoup4 (>=4.12.0,<5.0.0)",
  "aiofiles (>=24.1.0,<25.0.0)",
  "cryptography (>=45.0.4,<46.0.0)",
  "sqlite-vec (>=0.1.0,<0.2.0)",
  "numpy (>=1.24.0,<2.0.0)",
  "PyGithub (>=2.1.0,<3.0.0)",
]
scripts = { goldentooth-agent = "goldentooth_agent.cli.main:app" }

[tool.poetry]
packages = [{ include = "goldentooth_agent", from = "src" }]
include = [
  { path = "src/goldentooth_agent/data/system_prompts/*.yaml", format = [
    "sdist",
    "wheel",
  ] },
  { path = "src/goldentooth_agent/data/sample_github/**/*.yaml", format = [
    "sdist",
    "wheel",
  ] },
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
typer = { extras = ["all"], version = "^0.16.0" }
poethepoet = "^0.35.0"
pytest-asyncio = "^1.0.0"
hypothesis = "^6.135.16"
psutil = "^7.0.0"
mypy = "^1.14.0"
types-PyYAML = "^6.0.0"
types-psutil = "^6.1.0"
pre-commit = "^4.0.1"
black = "^24.10.0"
isort = "^5.13.2"
ruff = "^0.8.4"
bandit = "^1.7.10"
types-aiofiles = "^24.1.0.20250606"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
# Exclude old directory from test discovery
norecursedirs = ["old", "*.egg", ".eggs", "dist", "build", ".tox", ".git", "__pycache__"]

[tool.poe.tasks]
test = "pytest tests/"
test-cov = "pytest tests/ --cov=goldentooth_agent"
test-sanity = "pytest tests/test_sanity.py -v"
test-maybe-await = "pytest tests/core/util/test_maybe_await.py -v"
test-core = "pytest tests/core/ -v"
test-flow-engine = "pytest tests/flow_engine/ -v"
test-flow-core = "pytest tests/flow_engine/core/ -v"
test-flow-combinators = "pytest tests/flow_engine/combinators/ -v"
test-flow-observability = "pytest tests/flow_engine/observability/ -v"
test-flow-registry = "pytest tests/flow_engine/registry/ -v"
typecheck = "mypy src/goldentooth_agent --strict --show-error-codes --pretty"
typecheck-all = "mypy . --strict --show-error-codes --pretty"

# Pre-commit management tasks
precommit-install = "pre-commit install"
precommit-update = "pre-commit autoupdate"
precommit-run = "pre-commit run --all-files"
precommit-run-hook = "pre-commit run"

# Quality assurance - run all checks
qa = ["typecheck", "test", "precommit-run"]

[tool.mypy]
# Strict type checking configuration aligned with Pylance standards
python_version = "3.13"
strict = true
show_error_codes = true
pretty = true
color_output = true

# Error reporting
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Import handling
ignore_missing_imports = false
follow_imports = "normal"
namespace_packages = true

# Disallow untyped code
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_any_expr = false    # Too aggressive - 245 errors (future enhancement)
disallow_any_decorated = false  # Disabled - too noisy for decorators
disallow_any_explicit = false  # Too restrictive for practical use
disallow_subclassing_any = true

# None and Optional handling
no_implicit_optional = true
strict_optional = true

# Miscellaneous strictness
strict_equality = true
extra_checks = true
check_untyped_defs = true
strict_concatenate = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
    "possibly-undefined",
    "redundant-cast",
    "comparison-overlap"
]

# Disable noisy error codes for practical development
disable_error_code = [
    "misc"  # Disable misc errors (mostly Any-related noise in decorators)
]

# Plugin support
plugins = []

# Per-module options for external libraries
[[tool.mypy.overrides]]
module = [
    "antidote.*",
    "atomic_agents.*",
    "typer.*",
    "platformdirs.*",
    "hunter.*",
    "loguru.*",
    "pytest.*",
    "hypothesis.*",
]
ignore_missing_imports = true

# Relaxed type checking for test code
[[tool.mypy.overrides]]
module = [
    "tests.*",
]
# Less strict type checking for tests
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
check_untyped_defs = false
disallow_any_generics = false
disallow_any_unimported = false
# Allow Any types in tests
disallow_any_explicit = false
disallow_any_decorated = false
disallow_subclassing_any = false
# Be more permissive with test code
warn_return_any = false
warn_unused_ignores = false

[tool.pyright]
# Pyright configuration (powers Pylance) - focus on catching issues MyPy misses
include = ["src"]
exclude = ["**/__pycache__", "build", "dist"]
pythonVersion = "3.13"
pythonPlatform = "All"

# Use basic type checking mode to avoid overwhelming errors
typeCheckingMode = "basic"

# Focus on the specific issues we want to catch that MyPy misses
reportPossiblyUnboundVariable = "error"
reportUnboundVariable = "error"

# Keep other checks as warnings to not overwhelm the output
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"
reportOptionalIterable = "warning"
reportOptionalContextManager = "warning"
reportOptionalOperand = "warning"

# Allow flexibility for existing codebase
reportPrivateUsage = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportAny = "none"

# Black code formatting configuration
[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | old
)/
'''

# isort import sorting configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["goldentooth_agent"]
known_third_party = ["pytest", "typer", "antidote", "atomic_agents"]

# Ruff linting configuration
[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = ["old/"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort - disabled to avoid conflict with isort hook
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "RUF100", # unused noqa
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
# Relaxed standards for test code
"tests/*" = [
    "E501",    # line too long
    "F841",    # unused variable (often used for test fixtures)
    "B007",    # unused loop variable (common in test iterations)
    "B008",    # function calls in argument defaults (OK for fixtures)
    "C901",    # too complex (test functions can be complex)
    "E722",    # bare except (sometimes needed in tests)
    "E731",    # lambda assignment (useful for test helpers)
    "UP038",   # old-style isinstance (not critical in tests)
    "RUF100",  # unused noqa (test code can be messy)
    "S101",    # assert statements (tests use asserts)
    "S106",    # hardcoded passwords (test data can be hardcoded)
    "S608",    # SQL injection (tests often use hardcoded SQL)
    "PLR0913", # too many arguments (test functions often need many fixtures)
    "PLR0915", # too many statements (test functions can be long)
    "B904",    # exception chaining (not always needed in tests)
    "F401",    # unused imports (tests often import for side effects)
]
# Also relax standards for example scripts and test scripts in root
"test_*.py" = ["E402", "F841", "B007"]
"examples/*" = ["E402", "F841", "B007"]
"scripts/*" = ["E402"]  # Module imports after path manipulation

# Bandit security linting configuration
[tool.bandit]
exclude_dirs = ["tests", "old"]
skips = ["B101", "B601"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
