[project]
name = "goldentooth-agent"
version = "0.0.1"
description = ""
authors = [
    { name = "Nate Douglas", email = "ndouglas@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "anthropic (>=0.52.1,<0.53.0)",
    "openai (>=1.52.0,<2.0.0)",
    "antidote (>=2.0.0,<3.0.0)",
    "atomic-agents (>=1.1.3,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "instructor (>=1.8.3,<2.0.0)",
    "pyee (>=13.0.0,<14.0.0)",
    "rich (>=13.0.0,<14.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "platformdirs (>=4.3.8,<5.0.0)",
    "hunter (>=3.7.0,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "cryptography (>=45.0.4,<46.0.0)",
    "sqlite-vec (>=0.1.0,<0.2.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "PyGithub (>=2.1.0,<3.0.0)",
    "tiktoken (>=0.5.0,<1.0.0)",
]
scripts = { goldentooth-agent = "goldentooth_agent.cli.main:app" }

[tool.poetry]
packages = [{ include = "*", from = "src" }]
include = []


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
typer = { extras = ["all"], version = "^0.16.0" }
poethepoet = "^0.35.0"
pytest-asyncio = "^1.0.0"
hypothesis = "^6.135.16"
psutil = "^7.0.0"
mypy = "^1.14.0"
types-PyYAML = "^6.0.0"
types-psutil = "^7.0.0"
pre-commit = "^4.0.1"
black = "^25.1.0"
isort = "^5.13.2"
ruff = "^0.12.2"
bandit = "^1.7.10"
types-aiofiles = "^24.1.0.20250606"
sphinx = "^7.0"
sphinx-rtd-theme = "^3.0"
myst-parser = "^4.0"
sphinx-autobuild = "^2024.2.4"
vulture = "^2.14"
pytest-mock = "^3.14.1"
radon = "^6.0.1"

[tool.poe.tasks]
pytest = "pytest"
pytest-coverage = "pytest --cov=src"
mypy = "mypy"
pyright-src = "pyright --project src"
pyright-tests = "pyright --project tests"
vulture = "vulture"

# Pre-commit management tasks
precommit-install = "pre-commit install"
precommit-update = "pre-commit autoupdate"
precommit-run = "pre-commit run --all-files"
precommit-run-hook = "pre-commit run"

# Documentation tasks
docs-build = "sphinx-build -b html docs docs/_build"
docs-clean = "sphinx-build -b html -E docs docs/_build"
docs-serve = "python -m http.server 8000 --directory docs/_build"
docs-autobuild = "sphinx-autobuild docs docs/_build --host 0.0.0.0 --port 8000"

# Code formatting tasks - auto-fix files (requires git add afterwards)
format-black = "black src/ tests/"
format-isort = "isort src/ tests/"
format-ruff = "ruff check src/ tests/ --fix"
format-files = "python scripts/format_files.py"
format = ["format-black", "format-isort", "format-ruff", "format-files"]

format-black-check = "black --check src/ tests/"
format-isort-check = "isort --check-only src/ tests/"
format-ruff-check = "ruff check src/ tests/"
format-check = ["format-black-check", "format-isort-check", "format-ruff-check"]

# Git hooks tasks for file and module size validation
file-length = "python -m src.git_hooks.cli file-length --all-files"
file-length-warnings = "python -m src.git_hooks.cli file-length --warnings --all-files"
module-size = "python -m src.git_hooks.cli module-size --all-files"
module-size-warnings = "python -m src.git_hooks.cli module-size --warnings --all-files"
function-length = "python -m src.git_hooks.cli function-length --all-files"
function-length-warnings = "python -m src.git_hooks.cli function-length --warnings --all-files"

[tool.mypy]
# Strict type checking configuration aligned with Pylance standards
python_version = "3.13"
strict = true
show_error_codes = true
pretty = true
color_output = true

# Error reporting
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Import handling
ignore_missing_imports = false
follow_imports = "normal"
namespace_packages = true

# Disallow untyped code
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_any_expr = false          # Too aggressive - 245 errors (future enhancement)
disallow_any_decorated = false     # Disabled - too noisy for decorators
disallow_any_explicit = false      # Too restrictive for practical use
disallow_subclassing_any = true

# None and Optional handling
no_implicit_optional = true
strict_optional = true

# Miscellaneous strictness
strict_equality = true
extra_checks = true
check_untyped_defs = true
strict_concatenate = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
    "possibly-undefined",
    "redundant-cast",
    "comparison-overlap",
]

# Disable noisy error codes for practical development
disable_error_code = [
    "misc", # Disable misc errors (mostly Any-related noise in decorators)
]

# Plugin support
plugins = []

# Per-module options for external libraries
[[tool.mypy.overrides]]
module = [
    "antidote.*",
    "atomic_agents.*",
    "typer.*",
    "hunter.*",
    "hypothesis.*",
    "loguru.*",
    "platformdirs.*",
    "pytest.*",
]
ignore_missing_imports = true

# Black code formatting configuration
[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | old
)/
'''

# isort import sorting configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["goldentooth_agent", "flowengine"]
known_third_party = ["pytest", "typer", "antidote", "atomic_agents"]

# Ruff linting configuration
[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = ["old/"]

[tool.ruff.lint]
select = []
ignore = []

[tool.ruff.lint.per-file-ignores]
# Relaxed standards for test code
"tests/*" = []

# Bandit security linting configuration
[tool.bandit]
exclude_dirs = ["tests", "old"]
skips = []

[tool.vulture]
min_confidence = 80
paths = ["src"]
ignore_names = [
    # CLI command functions - may be called via typer decorators
    "*_command",
    "*_cmd",
    # Entry points and main functions
    "main",
    "app",
    "cli",
    # Exception classes that may be imported but not instantiated
    "*Error",
    "*Exception",
    # Pydantic model fields that appear unused but are accessed via __dict__
    "*_field",
    # Test-related functions
    "test_*",
    "Test*",
    "*_test",
    # Configuration and setup functions
    "*Config*",
    "*_config",
    "setup_*",
    "configure_*",
    # Protocol and interface definitions
    "*Protocol",
    "*Interface",
    # Type definitions
    "*Type",
    "*Dict",
    # Dependency injection related
    "inject*",
    "*_injectable",
    # CLI commands defined with decorators
    "list_*",
    "show_*",
    "run_*",
    "demo_*",
    "describe_*",
    "exec_*",
    "query_*",
    # Protocol method parameters (interface definitions)
    "key",
    "value",
    "stream",
]
exclude = ["tests/", "examples/", "build/", "dist/", "__pycache__/"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
