[project]
name = "goldentooth-agent"
version = "0.0.1"
description = "An experimental intelligent agent for my Pi Bramble."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["typer>=0.12.0", "rich>=13.0.0"]
authors = [{ name = "Nathan Douglas", email = "github@darkdell.net" }]
keywords = ["raspberry-pi", "cluster", "agent", "goldentooth"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Distributed Computing",
  "Topic :: System :: Systems Administration",
]

[project.scripts]
goldentooth-agent = "goldentooth_agent.cli:main"
gta = "goldentooth_agent.cli:main"

[project.urls]
Homepage = "https://github.com/goldentooth/agent"
Repository = "https://github.com/goldentooth/agent"
Issues = "https://github.com/goldentooth/agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "black>=25.1.0",
  "isort>=6.0.1",
  "mypy>=1.17.0",
  "pre-commit>=4.2.0",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.4",
]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["agent", "tests"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["agent", "tests"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "--strict-markers",
  "--strict-config",
  "--verbose",
  "--cov=agent",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["agent"]
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*", "*/.*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "goldentooth_agent.cli"
disallow_untyped_decorators = false
